Adding for and case instructions, also continue and break instructions. Modifying Write, Writeln and for statements. Adding native functions for print strings and concatenate strings. Modifiying And, Literal and Plus classes.

--- a/PascalCompiler/PascalCompiler/PascalCompiler.csproj
+++ b/PascalCompiler/PascalCompiler/PascalCompiler.csproj
@@ -7,9 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Native\**" />
+    <EmbeddedResource Remove="Native\**" />
+    <None Remove="Native\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Irony">
       <HintPath>..\..\..\..\..\..\..\compiladores2\Irony.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="concatProc.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="printStringProc.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
